z-index added for trasparent issue

--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -15,6 +15,7 @@ header {
   padding: 0 200px;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 #nav {
